    *  (ms) Added a L4p::Appender::String appender to handle the
            rendering internally.
    *  (ms) Documentation patch by Matisse Enzer on increased/
            decreased log levels.
    *  (ms) Fixed stack trace level of logcarp()
    *  (ms) Carl Franks reported that the test suite failed on WinXP SP2
            because of a hardcoded /tmp - fixed by File::Spec->tempdir().

1.03 (2006/01/30)
    * (ms) Some perl-5.6.1 installations have a buggy Carp.pm. Skipping
           4 test cases for these. Reported by Andy Ford and Matisse Enzer.
    * (ms) The DBI appender now reconnects on stale DB connections.
    * (ms) Fixed Win32 test bug as reported in 
           http://rt.cpan.org/Ticket/Display.html?id=17436 by barbie.
           Instead of deleting a file still in use by an appender (which
           Windows doesn't like), the file gets now truncated.

1.02 (2005/12/10)
    * (ms) Adapted t/006Config-Java.t to cope with Win32 path separators
    * (ms) Corrected typo in Chainsaw FAQ, reported by Bernd Dirksen.
    * (ms) Brian Edwards noticed that (Screen, File) were missing a
           base class declaration, causing $logger->add_appender() to
           fail. Fixed with test case.
    * (ms) Log::Log4perl::Appender::File now handles the case where the
           logfile suddenly disappears.
    * (ms) Fixed section indentation in main man page
    * (ms) Converted Ceki's last name to UTF-8 (a historic step!)

1.01 (09/29/2005)
    * (ms) Added 'utf8' and 'binmode' flags to Log::Log4perl::Appender::File
           per suggestion by Jonathan Warden.
    * (ms) Made test cases 003Layout.t and 033UsrCspec.t resilient against
           broken ActiveState 5.8.4 and 5.8.7.
    * (ms) Skipped failing test cases for 5.005, looks like the caller() level
           in carp() is wrong, but not worth fixing.
    * (ms) Fixed the bug with the caller level of the first 
           log message sent after init_and_watch() detected a change. Added